--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,3 +29,26 @@ target_include_directories(TodoApp PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/src
     ${CMAKE_CURRENT_SOURCE_DIR}/Forms
 )
+
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  GIT_REPOSITORY https://github.com/google/googletest
+  GIT_TAG        v1.14.0
+)
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
+enable_testing()
+
+add_executable(test_main test/test_main.cpp src/CreateNewForm.cpp test/test_CreateNewForm.cpp)
+target_link_libraries(test_main gtest_main)
+
+target_include_directories(test_main PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}/src
+    ${CMAKE_CURRENT_SOURCE_DIR}/test
+)
+
+include(GoogleTest)
+gtest_discover_tests(test_main)
